--- a/test/index.hbs
+++ b/test/index.hbs
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p>hello {{ person }}, welcome to {{ address.city }}</p>
-  <p>{{ undefinedField }}</p>
+  <p>{{ undefinedField }}{{ aFilter person }}</p>
 </body>
 </html>
